# ujson5

./: .bandit  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .pytest.ini  CHANGELOG.md  DFA.md  Makefile  README.md  bandit.yaml  cspell.json  mkdocs.yml  pyjp5.code-workspace  pyjson5.code-workspace  pyproject.toml  ujson5.code-workspace
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: CI.yml  benchmark.yml  black.yml  deploy_docs.yml  docs.yml  flake8.yml  formatters.yml  mypy.yml  pylint.yml  python-package.yml  release.yml
.trunk/: trunk.yaml
docs/: contributing.md  index.md  quick_start.md  start_decoding.md  start_encoding.md
docs/api_reference/: core.md  decode.md  decoder.md  encode.md  encoder.md
docs/getting_started/: decoding.md  encoding.md  overview.md
release/: README.md  prepare.py  push.py  shared.py
src/pyjp5/: __init__.py  comments.py  core.py  decoder.py  encoder.py  err_msg.py  lexer.py  lexer_consts.py  parser.py  utils.py
src/pyjson5/: core.py  err_msg.py  lexer.py  parser.py
src/ujson5/: __init__.py  __version__.py  cli.py  consts.py  core.py  decoder.py  encoder.py  err_msg.py  lexer.py
tests/: config.json5  example_consts.py  generate_snapshots.py  test_benchmark.py  test_cli.py  test_comment_lexer.py  test_decoder.py  test_encoder.py  test_identifier_lexer.py  test_json5_examples.py  test_lexer.py  test_native_json_benchmark.py  test_number_lexer.py  test_official_examples.py  test_parser.py  test_snapshots.py  test_string_lexer.py  test_version.py
tests/blns/: blns.json
tests/json5_examples/arrays/: no-comma-array.errorSpec
tests/json5_examples/comments/: top-level-block-comment.errorSpec  top-level-block-comment.txt  top-level-inline-comment.errorSpec  top-level-inline-comment.txt
tests/json5_examples/objects/: illegal-unquoted-key-symbol.errorSpec  leading-comma-object.errorSpec  no-colon-object.txt
tests/json5_examples/strings/: no-comma-array.errorSpec  unescaped-multi-line-string.errorSpec
tests/json_test_suite/test_parsing/: y_string_allowed_escapes.json
tests/json_test_suite/test_transform/: string_2_escaped_invalid_codepoints.json  string_2_invalid_codepoints.json  string_3_escaped_invalid_codepoints.json  string_3_invalid_codepoints.json
tests/native_json_benchmark/: README.md
tests/native_json_benchmark/roundtrip/: roundtrip27.json
tests/test_snapshots/: generate_snapshots.py  snapshots.py  test_snapshots.py
tests/test_snapshots/snapshots/: alpha_default.json5  alpha_no_trailing_comma.json5  alpha_special_separators.json5  alpha_with_trailing_comma.json5  composite_example_7_indent.json5  composite_example_with_comments.json5  data_class_example.json5  pydantic_example.json5
tests/test_unit_tests/: test_decoder.py  test_encoder.py  test_identifier_lexer.py  test_lexer.py  test_string_lexer.py
