[project]
name = "pyjp5"
description = "TODO"
authors = [
    {name = "Austin Yu",email = "yuxm.austin1023@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]
dynamic = ["version"]


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
version = "0.0.0"
[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^25.1.0"
flake8 = "^7.1.1"
pylint = "^3.3.4"
mypy = "^1.15.0"
flake8-simplify = "^0.21.0"
flake8-mutable = "^1.2.0"
flake8-print = "^5.0.0"
flake8-use-fstring = "^1.4"
flake8-builtins = "^2.5.0"
flake8-functions-names = "^0.4.0"
flake8-variables-names = "^0.0.6"
flake8-no-implicit-concat = "^0.3.7"
requests = "^2.32.3"

[tool.bandit]
skips = ["B101", "B311"]

[tool.pytest.ini_options]
addopts = """
    --cov pyjp5
    --cov-report xml:tests/.coverage/cov.xml
    --cov-report html:tests/.coverage/html
"""

[tool.poetry-dynamic-versioning]
enable = true
