[build-system]
requires = ['hatchling', "hatch-vcs", 'hatch-fancy-pypi-readme>=22.5.0']
build-backend = 'hatchling.build'


[project]
name = "ujson5"
description = "A fast JSON5 encoder/decoder for Python"
authors = [{ name = "Austin Yu", email = "yuxm.austin1023@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
dynamic = ['version', 'readme']


[project.scripts]
ujson5 = "ujson5.cli:main"


[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-codspeed",
    "pytest-test-groups",
]

pylint = ["pylint"]

flake8 = [
    "flake8",
    "flake8-simplify",
    "flake8-mutable",
    "flake8-print",
    "flake8-use-fstring",
    "flake8-builtins",
    "flake8-functions-names",
    "flake8-variables-names",
    "flake8-no-implicit-concat",
]

mypy = ["mypy"]

black = ["black"]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
    "pymdown-extensions",
]

all = [
    { include-group = "dev" },
    { include-group = "pylint" },
    { include-group = "flake8" },
    { include-group = "mypy" },
    { include-group = "black" },
    { include-group = "docs" },
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = 'text/markdown'
# construct the PyPI readme from README.md and CHANGELOG.md
fragments = [
    {path = 'README.md'},
    {text = "\n## Changelog\n\n"},
    {path = 'CHANGELOG.md', pattern = '(.+?)<!-- PyPI README description limit -->'},
]

[tool.hatch.build.targets.sdist]
include = [
    '/README.md',
    '/CHANGELOG.md',
    '/src',
    '/tests',
]

[tool.bandit]
skips = ["B101", "B311"]

[tool.pytest.ini_options]
addopts = """
    --cov .
    --cov-report xml:tests/.coverage/cov.xml
    --cov-report html:tests/.coverage/html
"""

[tool.coverage.report]
exclude_also = ['pytest.skip', 'if sys.version_info < (3, 12): ']

[tool.coverage.run]
omit = ["tests/test_snapshots/generate_snapshots.py", "tests/test_benchmark.py"]
